syntax = "proto3";

package user;

option go_package = "github.com/rishu/microservice/gen/api/user";

import "api/user/enums/enums.proto";
import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string email = 2;
  enums.UserType user_type = 3;
  string password = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

